<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hello</string>
    <string name="action_settings">Settings</string>
    <string name="title">我联</string>
    <string name="titlearea">选择国家或地区</string>
    <string name="loginbutton">登 录</string>
    <string name="regbutton">创建账户</string>
    <string name="submit">提 交</string>
    <string name="account">邮箱账号</string>
    <string name="password">登录密码</string>
    <string name="phonenumber">手机号码</string>
    <string name="verifycode">验证码</string>
    <string name="creataccount">创建账户</string>
    <string name="creataccount_two">资料填写</string>
    <string name="faceDescription">好友头像</string>
    <string name="loadDescription">加载进度条</string>
    <string name="country">+86 中国（国家，地区）</string>
    <string name="normalarea">86</string>
    <string name="call">呼 叫</string>
    <string name="back">背景图片</string>
    <string name="realname">您的真实中文姓名</string>
    <string name="regfinish">提交</string>
    <string name="takephoto">拍摄照片</string>
    <string name="reload">重新验证</string>
    <string name="selectpic">从相册中选择图片</string>
    <string name="friendcircle">通讯圈</string>
    <string name="serchcircle">请输入通讯圈名称或ID 搜索想加入的通讯圈</string>
    <string name="title_activity_login_load">LoginLoadActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register_verify">RegisterVerifyActivity</string>

</resources>
