<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"  
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"  
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#4497df"
    android:padding="18dp"
    android:gravity="center|center_horizontal|center_vertical" >
	
    <com.hello008.util.RoundImageView 
				android:id="@+id/faceimg"
				android:layout_width="156dip"
				android:layout_height="156dip"
				android:scaleType="centerCrop"
				android:focusable="false"
				android:padding="5dip"
				android:gravity="center" 
				imagecontrol:roundedimageview_border_thickness="4dip"
				imagecontrol:roundedimageview_border_outside_color="@color/white"
				imagecontrol:roundedimageview_border_inside_color="@color/white"
				android:src="@drawable/clickhead"
				android:contentDescription="@string/faceDescription"/>
    

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittextstyle"
        android:layout_weight="1"
        android:paddingLeft="15sp"
        android:singleLine="true"
        android:hint="@string/account"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColorHint="#bbffffff"
        android:textColor="#99eff7">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/logbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/loginbutton"
        android:background="@drawable/logbtnselect"
        android:textColor="#77cff5"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginTop="15sp"/>
    
 

</LinearLayout>
